--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 <body>
 
     <header>
-        <div class="logo">TIMERIK<br><span>MUSIC</span></div>
+        <div class="logo">TIMERIK<br><span>RECORDS</span></div>
         <div class="sub-logo">ДОВЕРЯЯ НАМ, ВЫ НЕ ПОЖАЛЕЕТЕ</div>
     </header>
 
@@ -165,7 +165,7 @@
     </div>
 
     <div class="action-area">
-        <a href="https://t.me/твой_линк" class="send-btn">DEMO</a>
+        <a href="https://records.timerik.v6.navy/contact" class="send-btn">DEMO</a>
     </div>
 
     <footer>
