--- a/выложить-релиз.html
+++ b/выложить-релиз.html
@@ -55,11 +55,11 @@
             
             <div class="row">
                 <div class="field-group">
-                    <label>MONTAGEM NESTA</label>
+                    <label>RELEASE NAME</label>
                     <input type="text" name="artist_name" placeholder="MONTAGEM NESTA" required>
                 </div>
                 <div class="field-group">
-                    <label>TRACK</label>
+                    <label>TYPE</label>
                     <select name="type">
                         <option value="track">TRACK</option>
                         <option value="album">ALBUM</option>
@@ -78,18 +78,18 @@
                     <select name="genre">
                         <option value="phonk">PHONK</option>
                         <option value="brazilian_funk">BRAZILIAN FUNK</option>
-                        <option value="hip_hop">HIP HOP</option>
+                        <option value="hip_hop">OTHER</option>
                     </select>
                 </div>
             </div>
 
             <div class="field-group">
-                <label>.WAV LINK (FULL PACK LINK)</label>
+                <label>.WAV LINK (FULL PACK LINK IF ALBUM)</label>
                 <input type="url" name="wav_link" placeholder="GOOGLE DRIVE / DROPBOX LINK" required>
             </div>
 
             <div class="field-group">
-                <label>ARTWORK LINK (MIN 1500X1500PX)</label>
+                <label>ARTWORK LINK (MIN 1500X1500PX MAX 5000X5000)</label>
                 <input type="url" name="artwork_link" placeholder="JPG, JPEG, PNG LINK" required>
             </div>
 
