--- a/выложить-релиз.html
+++ b/выложить-релиз.html
@@ -55,7 +55,7 @@
             
             <div class="row">
                 <div class="field-group">
-                    <label>RELEASE NAME</label>
+                    <label>ARTIST NAME - RELEASE NAME</label>
                     <input type="text" name="artist_name" placeholder="MONTAGEM NESTA" required>
                 </div>
                 <div class="field-group">
