--- a/concert/sayfakeimages/sayfake/snua9a8u2892-0343543453535snmjuijhuoao928jsuua8oi90w9edoa/s.html
+++ b/concert/sayfakeimages/sayfake/snua9a8u2892-0343543453535snmjuijhuoao928jsuua8oi90w9edoa/s.html
@@ -2,27 +2,27 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAYFAKE</title>
+    <title>SAYFAKE OFFICIAL</title>
     <style>
-        body, html {
+        body {
             margin: 0;
-            padding: 0;
-            width: 100%;
-            height: 100%;
+            background: #000;
+            height: 100vh;
             display: flex;
-            justify-content: center;
             align-items: center;
-            background-color: #000; /* Черный фон под стиль обложки */
+            justify-content: center;
+            overflow: hidden;
         }
         img {
-            max-width: 100%;
+            /* Если хочешь, чтобы была как баннер — на всю ширину */
+            width: 100%;
             height: auto;
-            display: block;
+            /* Если хочешь, чтобы просто по центру — убери width: 100% и поставь max-width: 1280px */
+            max-width: 1280px; 
         }
     </style>
 </head>
 <body>
-    <img src="sayfake.png" alt="SAYFAKE">
+    <img src="sayfake.png" alt="Картинка не найдена! Проверь название файла">
 </body>
 </html>
