--- a/pozharnik.html
+++ b/pozharnik.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bandit001, AzerOne - Pozharnik | Smartlink</title>
+    
+    <link rel="icon" type="image/jpeg" href="pozharnik.jpeg">
+    
     <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -22,7 +25,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
-            background-image: radial-gradient(circle at top, #300, transparent);
+            background-image: radial-gradient(circle at top, #441111, transparent);
         }
 
         .container {
@@ -35,49 +38,49 @@
         .cover {
             width: 100%;
             aspect-ratio: 1/1;
+            /* Вернул расширение .jpeg */
             background: url('pozharnik.jpeg') center/cover no-repeat;
             border-radius: 12px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.5), 0 0 20px rgba(255, 59, 48, 0.2);
+            box-shadow: 0 10px 40px rgba(0,0,0,0.8), 0 0 20px rgba(255, 59, 48, 0.15);
             margin-bottom: 25px;
         }
 
         h1 {
             font-family: 'Dela Gothic One', cursive;
-            font-size: 22px;
+            font-size: 24px;
             margin: 10px 0 5px;
             text-transform: uppercase;
         }
 
         .artists {
-            color: #aaa;
+            color: #888;
             font-size: 14px;
             margin-bottom: 30px;
-            letter-spacing: 1px;
         }
 
         .links-list {
             display: flex;
             flex-direction: column;
-            gap: 12px;
+            gap: 10px;
         }
 
         .link-item {
             background: var(--card-bg);
-            padding: 15px 20px;
-            border-radius: 8px;
+            padding: 14px 20px;
+            border-radius: 10px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             text-decoration: none;
             color: white;
-            transition: 0.3s;
-            border: 1px solid #222;
+            transition: all 0.2s ease-in-out;
+            border: 1px solid #1a1a1a;
         }
 
         .link-item:hover {
-            background: #1a1a1a;
+            background: #181818;
             border-color: var(--primary-red);
-            transform: translateY(-2px);
+            transform: scale(1.02);
         }
 
         .platform-name {
@@ -86,18 +89,24 @@
         }
 
         .btn-play {
-            background: var(--primary-red);
-            padding: 6px 16px;
-            border-radius: 20px;
-            font-size: 12px;
-            font-weight: bold;
+            color: var(--primary-red);
+            font-size: 11px;
+            font-weight: 800;
             text-transform: uppercase;
+            border: 1px solid var(--primary-red);
+            padding: 5px 12px;
+            border-radius: 4px;
+        }
+
+        .link-item:hover .btn-play {
+            background: var(--primary-red);
+            color: white;
         }
 
         .footer {
             margin-top: 40px;
             font-size: 10px;
-            color: #444;
+            color: #333;
             text-transform: uppercase;
             letter-spacing: 2px;
         }
@@ -128,21 +137,9 @@
             <span class="platform-name">YouTube Клип</span>
             <span class="btn-play">Смотреть</span>
         </a>
-        <a href="https://music.youtube.com/watch?v=WnoVZT7wL9M" class="link-item" target="_blank">
-            <span class="platform-name">YouTube Music</span>
-            <span class="btn-play">Слушать</span>
-        </a>
-        <a href="https://music.mts.ru/album/40723456" class="link-item" target="_blank">
-            <span class="platform-name">Kion (MTS)</span>
-            <span class="btn-play">Слушать</span>
-        </a>
-        <a href="https://www.deezer.com/album/920598511" class="link-item" target="_blank">
-            <span class="platform-name">Deezer</span>
-            <span class="btn-play">Слушать</span>
-        </a>
     </div>
 
-    <div class="footer">Powered by TIMERIK RECORDS</div>
+    <div class="footer">© TIMERIK RECORDS 2026</div>
 </div>
 
 </body>
